apps/adguard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: adguard
  name: adguard
  namespace: adguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard
  template:
    metadata:
      labels:
        app: adguard
    spec:
      hostNetwork: true
      containers:
      - image: docker.io/adguard/adguardhome:v0.107.7
        name: adguard
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: /opt/adguardhome/work
          name: work
        - mountPath: /opt/adguardhome/conf
          name: conf
      volumes:
      - name: work
        hostPath:
          path: /srv/adguard/work
          type: DirectoryOrCreate
      - name: conf
        hostPath:
          path: /srv/adguard/conf
          type: DirectoryOrCreate
