apps/adguard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
  name: adguard
  namespace: adguard
spec:
  rules:
  - host: adguard.192.168.0.100.nip.io
    http:
      paths:
      - backend:
          service:
            name: adguard
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  - host: adguard.k3router.ml
    http:
      paths:
      - backend:
          service:
            name: adguard
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
